2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 517706 – Connecting GtkButton with "use-stock" == FALSE to a
	GtkAction has problems
	Patch by Peter Johanson

	* gtk/gtkaction.c (connect_proxy): Set the image of a button
	proxy to the "icon-name" property.

	(gtk_action_set_short_label):  If the "image" property is set 
	on the button proxy, also tries to set the "label" property on 
	the GtkButton.

2008-06-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmain.c
	* gtk/gtktrayicon-x11.c: don't #include <libintl.h>, it's pulled
	in via "gtkintl.h" from <glib/gi18n-lib.h>.

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	RH bug 248245 and 449379: cups client printing from gnome
	applications fail

	* modules/printbackends/cups/gtkprintbackendcups.c: Really fix
	printer URI construction. Patch by Marek Kasik
	
2008-06-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup):
	limit the number of displayed items by the actual screen height
	instead of some arbitrary value (Bug #408154, Xan Lopez and
	Christian Dywan).

2008-06-11  Behdad Esfahbod  <behdad@gnome.org>

	Bug 503071 – Application direction changes to right to left even if
	theres no translation

	* configure.in: Bump glib requirement.

	* gtk/gtkaccellabel.c
	(_gtk_accel_label_class_get_accelerator_label):
	* gtk/gtkactiongroup.c (dgettext_swapped):
	* gtk/gtkbuilder.c (gtk_builder_class_init):
	* gtk/gtkbuilderparser.c (_dpgettext),
	(_gtk_builder_parser_translate):
	* gtk/gtkfilechooserdefault.c (list_size_data_func):
	* gtk/gtkimmulticontext.c (gtk_im_multicontext_append_menuitems):
	* gtk/gtkintl.h:
	* gtk/gtkmain.c (setlocale_initialization),
	(do_pre_parse_initialization), (gettext_initialization):
	* gtk/gtkstock.c (gtk_stock_lookup), (sgettext_swapped):
	Use g_dgettext() and g_dngettext().

2008-06-11  Matthias Clasen <mclasen@redhat.com>

	* docs/RELEASE-HOWTO: Updates

2008-06-11  Tor Lillqvist  <tml@novell.com>
